--- a/pages/applicant-start.html
+++ b/pages/applicant-start.html
@@ -72,7 +72,7 @@
         </a>
         <div style="width: 20vh;"></div>
 
-        <a href="#" class="block-link link-dark">
+        <a href="applicant-case-overview.html" class="block-link link-dark">
             <div class="bg-beige rounded-corners grow p-0 d-flex justify-content-center align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
                     <img src="../pictures/chat.png" style="max-width: 8rem; height:auto; margin-bottom: 10px;">
