--- a/pages/login-SA.html
+++ b/pages/login-SA.html
@@ -50,10 +50,16 @@
 
 <!--Main-->
 
+<div class="container-fluid bg-dark d-flex justify-content-center" style="margin-top: 5vh; width: 79vw;">
+    <h3 class="text-light">
+        Logging in as:
+    </h3>
+</div>
+
 <div class="container-fluid px-0 pb-2 pt-0 d-flex justify-content-between" style="margin-top: 5vh; width: 80vw;">
 
     <a href="login.html" class="block-link link-dark">
-        <div class="bg-beige grow p-0 justify-content-center d-flex align-items-center flex-column mx-2" style="height: 20vh;">
+        <div class="bg-beige grow pt-3 justify-content-center d-flex align-items-center flex-column mx-2" style="height: 15vh;">
             <div class="d-flex justify-content-center">
                 <img src="../pictures/client.png" style="max-width: 2rem; height:auto; margin-bottom: 10px;">
             </div>
@@ -65,7 +71,7 @@
 
 
     <a href="login-SA.html" class="block-link link-dark">
-        <div class="bg-beige grow p-0 d-flex justify-content-center align-items-center flex-column mx-2" style="height: 20vh;">
+        <div class="bg-beige grow pt-3 d-flex justify-content-center align-items-center flex-column mx-2" style="height: 15vh;">
             <div class="d-flex justify-content-center">
                 <img src="../pictures/student.png" style="max-width: 2rem; height:auto; margin-bottom: 10px;">
             </div>
@@ -77,7 +83,7 @@
 
 
     <a href="login-lawyer.html" class="block-link link-dark">
-        <div class="bg-beige grow p-0 d-flex justify-content-center align-items-center flex-column mx-2" style="height: 20vh;">
+        <div class="bg-beige grow pt-3 d-flex justify-content-center align-items-center flex-column mx-2" style="height: 15vh;">
             <div class="d-flex justify-content-center">
                 <img src="../pictures/lawyer.png" style="max-width: 2rem; height:auto; margin-bottom: 10px;">
             </div>
@@ -89,8 +95,6 @@
 
 </div>
 
-<div class="container-fluid bg-beige" style="position: absolute; top:35%">
-
 <div class="container" id="userLoginRegister">
 
     <div class="login-reg-panel" style="margin-top: 18rem;">
@@ -100,7 +104,7 @@
 			<input type="radio" name="active-log-panel" id="log-reg-show"  checked="checked">
 		</div>
 							
-		<div class="register-info-box">
+		<div class="register-info-box px-4">
 			<h2>Don't have an account?</h2>
 			<label id="label-login" for="log-login-show">Register</label>
 			<input type="radio" name="active-log-panel" id="log-login-show">
