--- a/pages/otp.html
+++ b/pages/otp.html
@@ -49,7 +49,7 @@
 
     <!--Body-->
 
-    <div class="container-fluid" style="margin-top: 15vh;">
+    <div class="container-fluid" style="margin-top: 5%;">
 
         <div class="container d-flex justify-content-center flex-column">
             <div class="w-100 bg-dblue d-flex justify-content-center mt-5 p-1">
@@ -64,7 +64,7 @@
                         <div class="w-100">
                           <input type="number" class="form-control" id="otpNumber" placeholder="6 digit OTP"></input>
                         </div>
-                        <div class="justify-content-center d-flex mt-3"><button type="submit" class="btn btn-secondary btn-sm">Login</button></div>
+                        <div class="justify-content-center d-flex mt-3"><button type="button" onclick="verify()" class="btn btn-secondary">Login</button></div>
                     </form>
                 </div>
             </div>
@@ -75,8 +75,25 @@
 
     </div>
 
+    <script>
+        window.onload = console.log(sessionStorage)
+
+        let userType =  sessionStorage.getItem("userType");
+
+        // if(userType == "client"){
+        //     window.location.replace("applicant-start.html");
+        // }
+        // else if(userType == "studentAssistant"){
+        //     window.location.replace("SA-dashboard.html");
+        // }
+        // else if(userType == "lawyer"){
+        //     window.location.replace("lawyer-dashboard.html");
+        // }
+
+    </script>
+
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="animations.js"></script>
+    <script src="../animations.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
