--- a/pages/applicant-case-overview.html
+++ b/pages/applicant-case-overview.html
@@ -159,12 +159,19 @@
 
       </div>
       
-      
+      <div class="d-grid gap-2">
+        <button class="btn btn-primary" type="button" onclick="dashboardReturn()">Back to Dashboard</button>
+      </div>
+
     </div>
 
     <!--Footer-->
 
-  
+    <script>
+      function dashboardReturn(){
+        window.location.replace("applicant-start.html")
+      }
+    </script>
 
   </body>
   </html>
