--- a/pages/pbc-start.html
+++ b/pages/pbc-start.html
@@ -50,11 +50,17 @@
     
     <!-- Main Section -->
 
-    <div class="container bg-beige pb-0 pt-3 d-flex align-items-center justify-content-center animate__animated animate__fadeIn rounded-corners" style="margin-top: 5vh; width: 80vw;">
-        <div class="d-flex flex-column">
-            <div class="d-flex justify-content-center"><h4><i><b>Important Notice</b></i></h4></div>
-            <div class="d-flex justify-content-center"><p><i>Each individual is entitled to one pro bono case per legal counsel centre, per lifetime.</i></p></div>
-        </div>
+    <div class="container pb-0 pt-3 d-flex align-items-center justify-content-center animate__animated animate__fadeIn rounded-corners" style="margin-top: 5vh; width: 80vw;">
+        <a href="pbc-dashboard.html" class="block-link link-dark">
+            <div class="bg-beige rounded-corners grow p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
+                <div class="d-flex justify-content-center">
+                    <img src="../pictures/contract.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <p>Dashboard to view cases and assign cases</p>
+                </div>
+            </div>
+        </a>
     </div>
 
 
@@ -66,7 +72,7 @@
                     <img src="../pictures/contract.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
                 </div>
                 <div class="d-flex justify-content-center">
-                    <p>New Case Application</p>
+                    <p>View Student Assistant Profiles</p>
                 </div>
             </div>
         </a>
@@ -84,19 +90,9 @@
         </a>
 
     </div>
-    <!--Footer-->
-    <div class ="container-fluid bg-dblue" style="position:absolute; bottom:0%;">
-        <div class="d-flex justify-content-end align-items-end mt-3 px-4">
-          <p class = "text-light">Proudly brought to you by Team Penteract.</p>
-        </div>
-    </div>
-
-    <script>
-        window.onload = console.log(sessionStorage);
-    </script>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="../animations.js"></script>
+    <script src="animations.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
