--- a/pages/applicant-case-overview.html
+++ b/pages/applicant-case-overview.html
@@ -168,6 +168,7 @@
     <!--Footer-->
 
     <script>
+      window.onload = console.log(sessionStorage);
       function dashboardReturn(){
         window.location.replace("applicant-start.html")
       }
