--- a/pages/pbc-start.html
+++ b/pages/pbc-start.html
@@ -54,7 +54,7 @@
         <a href="pbc-dashboard.html" class="block-link link-dark">
             <div class="bg-beige rounded-corners grow p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
-                    <img src="../pictures/contract.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
+                    <img src="../pictures/dashboard.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
                 </div>
                 <div class="d-flex justify-content-center">
                     <p>Dashboard to view cases and assign cases</p>
@@ -69,7 +69,7 @@
         <a href="./clinic-select.html" class="block-link link-dark">
             <div class="bg-beige rounded-corners grow p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
-                    <img src="../pictures/contract.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
+                    <img src="../pictures/student.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
                 </div>
                 <div class="d-flex justify-content-center">
                     <p>View Student Assistant Profiles</p>
